# PlantTracker

./: .gitignore  docker-compose.yml
api/: .env  Cargo.toml  Dockerfile
api/.sqlx/: query-004c56a2f8e5c994fe10f9987c15b384e98cca867c941e5aef230fb842c4d831.json  query-0290d70d719afeda05e78b8890934dd794a75251d06f860cff4c5e99c9c44555.json  query-1d564ed012da2c605c9b6f275b7545032be650c305016865be791446141f8d4a.json  query-1e76904c32af73debd883d9e1b03999af34b2396b1a650c94b5212975353eccf.json  query-249cac598f0d1ce6e325f25bd19ed160c6555c615b32d436b93b5132efcd67fd.json  query-36a5e6977c113acd038e55bb37914d210d9309e12751dcb9a00a1480d9643730.json  query-36ac6098c8b9a26eee3cfc473558b1d1d09e69120286613c8b326d64250ff7cd.json  query-4ba5e20441015373dba0912a4520828d0858c1d2f78e9571988d888b90aece0d.json  query-4fd03561b061f6cd29ba80528a30a6149f56a2d02c84994d931237d954120e21.json  query-510075026fe08da1737d530e5837f525068ceda2e53db5636a129b6f9f1016e5.json  query-55a66b1b5fb5adecdff7bb315d9eab87b0f718126adfb1fd03db54d9130c3efd.json  query-5b94a53df29d8f790f8ca3c21d0c3f82e4391ea8ea3a4a7ce2065b4fcdb93754.json  query-6526ef5892e0ef601104ad2ab762e6a980d0154498a8abe6e86a986938f7f26c.json  query-6c32b03239fab0d56d3a68952276874a903de14f6db8760a8a617b8b98d2c1cd.json  query-76793f07204b89f7c2bc205e973138f3cecf9ad7df24a7832e98ba4075a42a4d.json  query-8ca67a2694d929285520040c9644df587adda46f0620b9af6b3829be10f1116e.json  query-927ed4ae71e15975aecc6bac1eba4bddb0e65f40524e5c2a8126ceee89276099.json  query-95f609e0172a39773d5a7dea72fc1a59b7ec07ce98c4749fe2316a5ef56fdf2f.json  (+6 more)
api/bruno/: bruno.json  (+1 more)
(+96 files in other folders)
