[package]
name = "plant-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
anyhow = "1.0.100"
dotenvy = "0.15.7"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"] }
log = "0.4.29"
env_logger = "0.11.8"
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
